added cproject to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ PRUEBAS/
 
 #Ignore language settings
 .settings/language.settings.xml
+
+#Ignore cproject
+.cproject
+
+#Ignore metadata
+.metadata/
