ñapa para que compile

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-#Ignore compiler output
+#compiler output
 Debug/
 Release/
 .settings/
-build/
+cmake/build/
 compile_commands.json
 
-#Ignore test folder
+#test folder
 Pruebas/
 PRUEBAS/
 
-#Ignore ccls cache
+#ccls cache
 .ccls-cache/
 .settings
+
+#vscode 
+.vscode
+.cproject
