fix build not compiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ file(GLOB_RECURSE SOURCE_H ${CMAKE_SOURCE_DIR}/ *.h)
 file(GLOB_RECURSE SOURCE_HPP ${CMAKE_SOURCE_DIR}/ *.hpp)
 
 add_library(${LIBRARY} STATIC
-  ${SOURCE_C}
-  ${SOURCE_CPP}
   ${SOURCE_H}
+  ${SOURCE_C}
+  ${SOURCE_HPP}
   ${SOURCE_CPP}
 )
 
